--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,10 @@ body {
 .right {
   width: 50%;
 }
-
+.me {
+  width: 50%;
+  position: fixed;
+}
 .section {
   margin-bottom: 40px;
 }
@@ -29,7 +32,9 @@ body {
   margin-bottom: 10px;
   font-size: 1.4em;
 }
-
+.section h3 {
+  margin-bottom: 0;
+}
 .section ul {
   list-style-type: disc;
   padding-left: 20px;
