--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
 
 .container {
   margin: 0;
+  background-color: #f0fdf4;
 }
 
 .content {
@@ -34,8 +35,6 @@ body {
 }
 .language-section {
   text-align: end;
-  margin-top: 5px;
-  margin-right: 5px;
 }
 .section h2 {
   border-bottom: 2px solid #059669;
