--- a/src/index.css
+++ b/src/index.css
@@ -44,24 +44,11 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #f0fdf4;
+  background-color: transparent;
   color: #111827;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
   border-color: #059669;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
