--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,11 @@ body {
 .section {
   width: 95%;
   font-size: 1.1rem;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border: 1px solid #10b981;
+  border-radius: 20px;
 }
 .about {
   font-size: 1.2rem;
@@ -57,6 +62,8 @@ body {
 }
 .skills {
   display: flex;
+}
+.skills-div {
   width: 95%;
 }
 
@@ -122,7 +129,7 @@ body {
 .profile-image {
   width: 40vh;
   max-width: 80%;
-  min-width: 200px;
+  min-width: 150px;
   border-radius: 50%;
   object-fit: cover;
   border: 4px solid #d1fae5;
@@ -174,14 +181,11 @@ body {
   font-size: 1.2rem;
 }
 
-.contact-text {
-  font-size: 0.95rem;
-}
-
 .contact-link {
   color: #111827;
   text-decoration: none;
   font-size: 0.95rem;
+  text-wrap: nowrap;
 }
 
 .contact-link:hover {
@@ -244,11 +248,7 @@ body {
   }
 }
 @media (max-width: 800px) {
-  .me-container {
-    padding: 1.5rem;
-  }
   .content {
-    background-color: #f0fdf4;
     flex-direction: column;
     padding: 1rem;
     margin-left: 10px;
