Minor changes in content and styles for mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -282,6 +282,12 @@ body {
   .navigation-section {
     display: none;
   }
+  .about {
+    hyphens: auto;
+  }
+  .section p {
+    hyphens: auto;
+  }
 }
 @media (max-width: 550px) {
   .eduexp-header {
